--- a/Web1/src/main/webapp/index.html
+++ b/Web1/src/main/webapp/index.html
@@ -28,7 +28,9 @@
     </form>
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <img src="asset/Yahoo_Finance_Logo_1.png" height = "55px">
+            <p><a href="https://finance.yahoo.com/" target="_blank">
+            <img src="asset/Yahoo_Finance_Logo_1.png" height = "40px">
+            </a></p>
         </li>
     </ul>
 </nav>
@@ -40,25 +42,25 @@
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">
-                            <span data-feather="home"></span>
+                            <span data-feather="dollar-sign"></span>
                             Stock Price <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file"></span>
+                        <a class="nav-link" href="option-price-welcome.jsp">
+                            <span data-feather="activity"></span>
                             Option Price
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            <span data-feather="shopping-cart"></span>
+                            <span data-feather="tool"></span>
                             Security Pricer
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            <span data-feather="users"></span>
+                            <span data-feather="trending-up"></span>
                             Implied Vol
                         </a>
                     </li>
@@ -133,36 +135,5 @@
     feather.replace()
 </script>
 
-<!-- Graphs -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-<script>
-    var ctx = document.getElementById("StockChart");
-    var StockChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-            labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-            datasets: [{
-                data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-                lineTension: 0,
-                backgroundColor: 'transparent',
-                borderColor: '#007bff',
-                borderWidth: 4,
-                pointBackgroundColor: '#007bff'
-            }]
-        },
-        options: {
-            scales: {
-                yAxes: [{
-                    ticks: {
-                        beginAtZero: false
-                    }
-                }]
-            },
-            legend: {
-                display: false,
-            }
-        }
-    });
-</script>
 </body>
 </html>
