--- a/Web1/src/main/webapp/index.html
+++ b/Web1/src/main/webapp/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -22,10 +21,6 @@
 <body>
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Equity Analysis</a>
-    <form class="form-control form-control-dark w-100" method="post" action="stock-price">
-        <input type="text" placeholder="Search" aria-label="Search" id="inst-name" name="inst-name">
-        <input type="submit" value="Submit" style="display: none"/>
-    </form>
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
             <p><a href="https://finance.yahoo.com/" target="_blank">
@@ -41,9 +36,9 @@
             <div class="sidebar-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">
+                        <a class="nav-link" href="stock-price-welcome.jsp">
                             <span data-feather="dollar-sign"></span>
-                            Stock Price <span class="sr-only">(current)</span>
+                            Stock Price
                         </a>
                     </li>
                     <li class="nav-item">
@@ -87,26 +82,14 @@
                 <ul class="nav flex-column mb-2">
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            <span data-feather="file-text"></span>
-                            Current month
+                            <span data-feather="user"></span>
+                            Developer
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             <span data-feather="file-text"></span>
-                            Last quarter
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file-text"></span>
-                            Social engagement
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file-text"></span>
-                            Year-end sale
+                            Disclaimer
                         </a>
                     </li>
                 </ul>
